# IDeal-Town

./: .env.example  .gitignore  README.md  hardhat.config.ts  index.html  package-lock.json  package.json
<contracts-directory>/types/: hardhat.d.ts  index.ts
<contracts-directory>/types/contracts/: IDTTokenPool.ts  index.ts
backend/: pyproject.toml  server.py
contracts/: Dao.sol  Factory.sol  IDTToken.sol  IDTTokenPool.sol  IPJToken.sol  Project.sol  ProjectFactory.sol
frontend/: .env.example  .gitignore  README.md  env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/zksnarkBuild/: epochKey.vkey.json  epochKey.wasm  epochKeyLite.vkey.json  epochKeyLite.wasm  epochKeyLite.zkey  epochKeyLite_main.circom  epochKeyLite_main.r1cs  epochKey_main.circom  epochKey_main.r1cs  preventDoubleAction.vkey.json  preventDoubleAction.wasm  preventDoubleAction_main.circom  preventDoubleAction_main.r1cs  proveReputation.vkey.json  proveReputation.wasm  proveReputation_main.circom  proveReputation_main.r1cs  signup.vkey.json  signup.wasm  signup.zkey  signup_main.circom  signup_main.r1cs  userStateTransition.vkey.json  userStateTransition.wasm  (+1 more)
frontend/src/: App.vue  main.ts
scripts/: deploy.ts
src/: App.vue  main.ts
src/assets/: main.css
src/components/: IdealTown.vue  MdEditor.vue  NavBar.vue
src/router/: index.ts
src/views/: CreateProjectView.vue  HomeView.vue  ProjectListView.vue  ProjectView.vue
test/: Dao.test.ts  Factory.test.ts  IDTToken.test.ts  IDTToken.ts  IDTokenPoolTest.ts  Project.test.ts  ProjectMaxie.ts  test.ts
(+35 files in other folders)
