[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["parker178912 <parker178912.en08@nycu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
requests = "^2.28.2"
Flask-SocketIO = "^5.3.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
